--- a/src/Brainf_ckSharp.Uwp/Resources/Dictionaries/MDL2Icons.xaml
+++ b/src/Brainf_ckSharp.Uwp/Resources/Dictionaries/MDL2Icons.xaml
@@ -6,6 +6,9 @@
     <x:String x:Key="ConsoleIcon">&#xF157;</x:String>
     <x:String x:Key="IDEIcon">&#xF158;</x:String>
 
+    <!--Settings-->
+    <x:String x:Key="UnlockIcon">&#xE1F7;</x:String>
+
     <!--Stdin header-->
     <x:String x:Key="OperatorsKeyboardIcon">&#xE92E;</x:String>
     <x:String x:Key="QuickMemoryViewerIcon">&#xE96A;</x:String>
