--- a/src/Brainf_ckSharp.Uwp/Views/IdeView.xaml
+++ b/src/Brainf_ckSharp.Uwp/Views/IdeView.xaml
@@ -11,6 +11,7 @@
     d:DesignWidth="400">
     <UserControl.DataContext>
         <views:IdeViewModel
+            x:Name="ViewModel"
             ScriptRunRequested="IdeViewModel_OnScriptRunRequested"
             ScriptDebugRequested="IdeViewModel_OnScriptDebugRequested"
             CharacterAdded="ViewModelCharacterAdded"
@@ -20,5 +21,7 @@
     </UserControl.DataContext>
 
     <!--IDE-->
-    <ide:Brainf_ckIde x:Name="CodeEditor"/>
+    <ide:Brainf_ckIde
+        x:Name="CodeEditor"
+        TextChanged="CodeEditor_OnTextChanged"/>
 </UserControl>
