--- a/src/Brainf_ckSharp.Uwp/Controls/Host/Shell.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/Host/Shell.xaml
@@ -75,7 +75,7 @@
         <TextBlock
             Grid.Row="0"
             Foreground="White"
-            Text="Brainf*ck#"
+            Text="Brainf*ck# (Preview)"
             FontSize="12"
             FontWeight="SemiLight"
             Margin="12,0,0,0"
