--- a/src/Brainf_ckSharp.Uwp/Views/IdeView.xaml
+++ b/src/Brainf_ckSharp.Uwp/Views/IdeView.xaml
@@ -23,5 +23,6 @@
     <!--IDE-->
     <ide:Brainf_ckIde
         x:Name="CodeEditor"
-        TextChanged="CodeEditor_OnTextChanged"/>
+        TextChanged="CodeEditor_OnTextChanged"
+        CursorPositionChanged="CodeEditor_OnCursorPositionChanged"/>
 </UserControl>
