--- a/src/Brainf_ckSharp.Uwp/Controls/Host/StatusBar/StatusBar.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/Host/StatusBar/StatusBar.xaml
@@ -8,59 +8,49 @@
     xmlns:viewModels="using:Brainf_ckSharp.Shared.ViewModels.Views"
     xmlns:system="using:System"
     xmlns:convertersUI="using:Brainf_ckSharp.Uwp.Converters.UI"
+    xmlns:converters="using:Brainf_ckSharp.Uwp.Converters"
+    xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
     mc:Ignorable="d"
     d:DesignHeight="48"
     d:DesignWidth="400">
     <UserControl.DataContext>
         <controls:StatusBarViewModel x:Name="ViewModel"/>
     </UserControl.DataContext>
+    <UserControl.Resources>
+
+        <!--Console/Ide converter-->
+        <converters:TypeToVisibilityConverter x:Key="IdeTypeConverter" TargetType="viewModels:IdeViewModel"/>
+    </UserControl.Resources>
 
     <Grid
         x:Name="RootGrid"
-        Background="{StaticResource SystemControlHighlightAccentBrush}">
+        Background="{StaticResource SystemControlHighlightAccentBrush}"
+        Padding="16,0,16,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/> <!--State-->
-            <ColumnDefinition Width="Auto"/> <!--Error-->
-            <ColumnDefinition Width="Auto"/> <!--Row-->
-            <ColumnDefinition Width="Auto"/> <!--Column-->
-            <ColumnDefinition Width="Auto"/> <!--File-->
+            <ColumnDefinition Width="Auto"/> <!--Info-->
         </Grid.ColumnDefinitions>
 
         <!--Visual states-->
         <VisualStateManager.VisualStateGroups>
 
-            <!--General UI states-->
+            <!--Read or error visual states-->
             <VisualStateGroup>
-                <VisualState x:Name="ConsoleState">
+                <VisualState>
                     <VisualState.StateTriggers>
                         <StateTrigger IsActive="{x:Bind ViewModel.WorkspaceViewModel.ValidationResult.IsSuccessOrEmptyScript, Mode=OneWay}"/>
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter 
-                            Target="RootGrid.Background"
-                            Value="{StaticResource SystemControlHighlightAccentBrush}"/>
-                        <Setter
-                            Target="ErrorBlock.Visibility"
-                            Value="Collapsed"/>
-                        <Setter
-                            Target="InfoBlock.Text"
-                            Value="Ready"/>
+                        <Setter Target="RootGrid.Background" Value="{StaticResource SystemControlHighlightAccentBrush}"/>
+                        <Setter Target="ErrorBlock.Visibility" Value="Collapsed"/>
+                        <Setter Target="InfoBlock.Text" Value="Ready"/>
                     </VisualState.Setters>
                 </VisualState>
-                <VisualState x:Name="ConsoleErrorState">
-                    <VisualState.StateTriggers>
-                        <StateTrigger IsActive="{x:Bind ViewModel.WorkspaceViewModel.ValidationResult.IsError, Mode=OneWay}"/>
-                    </VisualState.StateTriggers>
+                <VisualState>
                     <VisualState.Setters>
-                        <Setter 
-                            Target="RootGrid.Background"
-                            Value="#FFCA5100"/>
-                        <Setter
-                            Target="ErrorBlock.Visibility"
-                            Value="Visible"/>
-                        <Setter
-                            Target="InfoBlock.Text"
-                            Value="Invalid syntax"/>
+                        <Setter Target="RootGrid.Background" Value="#FFCA5100"/>
+                        <Setter Target="ErrorBlock.Visibility" Value="Visible"/>
+                        <Setter Target="InfoBlock.Text" Value="Invalid syntax"/>
                     </VisualState.Setters>
                 </VisualState>
             </VisualStateGroup>
@@ -71,62 +61,72 @@
             x:Name="InfoBlock"
             Text="Ready"
             Foreground="White"
-            Margin="8,0,8,0"
             FontSize="12"
             FontWeight="Normal"
             VerticalAlignment="Center"
             TextTrimming="CharacterEllipsis"/>
 
-        <!--Error-->
-        <TextBlock
-            x:Name="ErrorBlock"
-            Foreground="White"
-            Margin="8,0,8,0"
-            FontSize="12"
-            VerticalAlignment="Center"
-            IsTextScaleFactorEnabled="False"
-            FontWeight="Normal"
+        <!--Using a WrapPanel here as it ignores the horizontal spacing for collapsed
+            items, whereas a StackPanel would still accumulate the spacing when not needed-->
+        <toolkit:WrapPanel
             Grid.Column="1"
-            Text="{x:Bind system:String.Format('Error: {0}', ViewModel.WorkspaceViewModel.ValidationResult.ErrorOffset), Mode=OneWay}"/>
+            Orientation="Horizontal"
+            HorizontalSpacing="16"
+            VerticalAlignment="Center">
 
-        <!--Operators-->
-        <TextBlock
-            x:Name="OpsBlock"
-            Foreground="White"
-            Margin="8,0,8,0"
-            FontSize="12"
-            VerticalAlignment="Center"
-            IsTextScaleFactorEnabled="False"
-            FontWeight="Normal"
-            Grid.Column="3"
-            Text="{x:Bind system:String.Format('Char: {0}', ViewModel.WorkspaceViewModel.Text.Length), Mode=OneWay}"/>
-
-        <!--File-->
-        <Grid
-            Grid.Column="4"
-            Visibility="{x:Bind convertersUI:ObjectNotNullToVisibilityConverter.Convert(ViewModel.WorkspaceViewModel.(viewModels:IdeViewModel.Code).File), Mode=OneWay, FallbackValue=Collapsed}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <TextBlock 
-                Text="&#xE70B;"
-                Style="{StaticResource FontIconTextBlockStyle}"
-                VerticalAlignment="Center"
-                FontSize="16"
-                Margin="0,2,0,0"/>
-            <TextBlock 
+            <!--Error-->
+            <TextBlock
+                x:Name="ErrorBlock"
                 Foreground="White"
-                Margin="4,0,0,0"
                 FontSize="12"
-                Text="{x:Bind ViewModel.WorkspaceViewModel.(viewModels:IdeViewModel.Code).File.DisplayName, Mode=OneWay}"
                 VerticalAlignment="Center"
                 IsTextScaleFactorEnabled="False"
-                Grid.Column="1"
-                TextWrapping="NoWrap"
-                TextTrimming="CharacterEllipsis"
-                FontWeight="{x:Bind convertersUI:BoolToFontWeightConverter.Convert(ViewModel.WorkspaceViewModel.IsUnsavedEditPending), Mode=OneWay}"
-                MaxLines="1"/>
-        </Grid>
+                FontWeight="Normal"
+                Text="{x:Bind system:String.Format('Error: {0}', ViewModel.WorkspaceViewModel.ValidationResult.ErrorOffset), Mode=OneWay}"/>
+
+            <!--Row-->
+            <TextBlock
+                Foreground="White"
+                FontSize="12"
+                VerticalAlignment="Center"
+                IsTextScaleFactorEnabled="False"
+                FontWeight="Normal"
+                Text="{x:Bind system:String.Format('Row: {0}', ViewModel.WorkspaceViewModel.Row), Mode=OneWay}"
+                Visibility="{x:Bind ViewModel.WorkspaceViewModel, Converter={StaticResource IdeTypeConverter}, Mode=OneWay}"/>
+
+            <!--Column-->
+            <TextBlock
+                Foreground="White"
+                FontSize="12"
+                VerticalAlignment="Center"
+                IsTextScaleFactorEnabled="False"
+                FontWeight="Normal"
+                Text="{x:Bind system:String.Format('Col: {0}', ViewModel.WorkspaceViewModel.Column), Mode=OneWay}"/>
+
+            <!--File-->
+            <Grid Visibility="{x:Bind convertersUI:ObjectNotNullToVisibilityConverter.Convert(ViewModel.WorkspaceViewModel.Code.File), Mode=OneWay, FallbackValue=Collapsed}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock 
+                    Text="&#xE70B;"
+                    Style="{StaticResource FontIconTextBlockStyle}"
+                    VerticalAlignment="Center"
+                    FontSize="14"/>
+                <TextBlock 
+                    Foreground="White"
+                    Margin="4,0,0,0"
+                    FontSize="12"
+                    Text="{x:Bind ViewModel.WorkspaceViewModel.Code.File.DisplayName, Mode=OneWay}"
+                    VerticalAlignment="Center"
+                    IsTextScaleFactorEnabled="False"
+                    Grid.Column="1"
+                    TextWrapping="NoWrap"
+                    TextTrimming="CharacterEllipsis"
+                    FontWeight="{x:Bind convertersUI:BoolToFontWeightConverter.Convert(ViewModel.WorkspaceViewModel.IsUnsavedEditPending), Mode=OneWay}"
+                    MaxLines="1"/>
+            </Grid>
+        </toolkit:WrapPanel>
     </Grid>
 </UserControl>
