Switched script source to ReadOnlyMemory<char>

--- a/src/Brainf_ckSharp/Configurations/Configuration.tt
+++ b/src/Brainf_ckSharp/Configurations/Configuration.tt
@@ -1,5 +1,6 @@
 ﻿<#@ template language="C#"
 #><#@ assembly name="System.Core" #>
+using System;
 using System.Threading;
 using Brainf_ckSharp.Enums;
 using Brainf_ckSharp.Memory.Interfaces;
@@ -22,7 +23,7 @@ foreach (var name in names)
         /// <summary>
         /// The source code to parse and execute
         /// </summary>
-        public readonly string? Source;
+        public readonly ReadOnlyMemory<char>? Source;
 
         /// <summary>
         /// The (optional) stdin buffer to use to run the script
