--- a/src/Brainf_ckSharp.Uwp/Controls/Host/StatusBar/StatusBar.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/Host/StatusBar/StatusBar.xaml
@@ -7,9 +7,10 @@
     xmlns:controls="using:Brainf_ckSharp.Shared.ViewModels.Controls"
     xmlns:viewModels="using:Brainf_ckSharp.Shared.ViewModels.Views"
     xmlns:system="using:System"
-    xmlns:convertersUI="using:Brainf_ckSharp.Uwp.Converters.UI"
     xmlns:converters="using:Brainf_ckSharp.Uwp.Converters"
+    xmlns:convertersUI="using:Brainf_ckSharp.Uwp.Converters.UI"
     xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
+    xmlns:enums="using:Brainf_ckSharp.Enums"
     mc:Ignorable="d"
     d:DesignHeight="48"
     d:DesignWidth="400">
@@ -34,7 +35,7 @@
         <!--Visual states-->
         <VisualStateManager.VisualStateGroups>
 
-            <!--Read or error visual states-->
+            <!--Console/IDE visual states-->
             <VisualStateGroup>
                 <VisualState>
                     <VisualState.StateTriggers>
@@ -51,6 +52,30 @@
                         <Setter Target="RootGrid.Background" Value="#FFCA5100"/>
                         <Setter Target="ErrorBlock.Visibility" Value="Visible"/>
                         <Setter Target="InfoBlock.Text" Value="Invalid syntax"/>
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+
+            <!--Background execution visual states-->
+            <VisualStateGroup>
+                <VisualState>
+                    <VisualState.StateTriggers>
+                        <StateTrigger IsActive="{x:Bind converters:ExecutionResultConverter.IsEmptyOrSuccessfulRun(ViewModel.BackgroundExecutionResult), Mode=OneWay}"/>
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="AutorunResultIcon.Text" Value="{StaticResource SuccessfulBackgroundExecutionIcon}"/>
+                        <Setter Target="AutorunResultIcon.Foreground" Value="Green"/>
+                        <Setter Target="BackgroundExecutionRootBorder.Background" Value="Green"/>
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState>
+                    <VisualState.StateTriggers>
+                        <StateTrigger IsActive="{x:Bind converters:ExecutionResultConverter.IsFailedRun(ViewModel.BackgroundExecutionResult), Mode=OneWay}"/>
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="AutorunResultIcon.Text" Value="{StaticResource FailedBackgroundExecutionIcon}"/>
+                        <Setter Target="AutorunResultIcon.Foreground" Value="DarkRed"/>
+                        <Setter Target="BackgroundExecutionRootBorder.Background" Value="DarkRed"/>
                     </VisualState.Setters>
                 </VisualState>
             </VisualStateGroup>
@@ -126,6 +151,43 @@
                     TextTrimming="CharacterEllipsis"
                     FontWeight="{x:Bind convertersUI:BoolToFontWeightConverter.Convert(ViewModel.WorkspaceViewModel.IsUnsavedEditPending), Mode=OneWay}"
                     MaxLines="1"/>
+            </Grid>
+
+            <!--Background execution result-->
+            <Grid
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch">
+                <Border
+                    x:Name="BackgroundExecutionRootBorder"
+                    CornerRadius="9999"
+                    Height="20"
+                    Width="20"
+                    BorderBrush="Black"
+                    BorderThickness="1"
+                    Background="Green">
+                    <Grid
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Center">
+                        <TextBlock
+                            Style="{StaticResource FontIconTextBlockStyle}"
+                            Text="{StaticResource PlaceholderBackgroundExecutionIcon}"
+                            Foreground="White"
+                            FontSize="10"
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Center"/>
+                        <TextBlock
+                            x:Name="AutorunResultIcon"
+                            Style="{StaticResource FontIconTextBlockStyle}"
+                            Text="{StaticResource SuccessfulBackgroundExecutionIcon}"
+                            Foreground="Green"
+                            FontSize="18"
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Center"/>
+                    </Grid>
+                </Border>
+                <Border
+                    x:Name="BackgroundExecutionToolTipBorder"
+                    Background="Transparent"/>
             </Grid>
         </toolkit:WrapPanel>
     </Grid>
